# jwts

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  WARP.md  docker-compose.yml  ece256-pk8-public.pem  jwts.service  notes.md  release-plz.toml  static-binary.md
.github/workflows/: release-plz.yml
src/: config.rs  error.rs  main.rs  models.rs
src/auth/: middleware.rs  mod.rs
src/keys/: jwks.rs  loader.rs  mod.rs
src/routes/: health.rs  jwks.rs  mod.rs  sign.rs  verify.rs
tests/: api.rs
