[package]
name = "jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12.19", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
