[package]
name = "jwts"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "JWTs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
dotenvy = "0.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.4"
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
elliptic-curve = { version = "0.13", features = ["pem"] }
p256 = "0.13"
p384 = "0.13"
thiserror = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
